<resources>
    <string name="app_name">Rugby Union</string>
    <string name="try5"> Try +5 Points</string>
    <string name="penalty"> Penalty +2 Points </string>
    <string name="conversion"> Conversion +2 Points </string>
    <string name="drop_goal"> Drop goal +3 Points </string>
    <string name="text0"> 0 </string>
    <string name="teamA"> Romania </string>
    <string name="teamB"> France </string>
    <string name="reset"> Reset </string>

</resources>
