<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/space0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="@dimen/spaceM"
                    android:text="@string/teamA"
                    android:textColor="@color/textColor1"
                    android:textSize="@dimen/textSizeM" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/spaceL"
                    android:text="@string/text0"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textSizeXXL" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spaceS"
                    android:layout_marginLeft="@dimen/spaceL"
                    android:layout_marginRight="@dimen/spaceL"
                    android:onClick="addFivePointsForTeamA"
                    android:text="@string/try5" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spaceS"
                    android:layout_marginLeft="@dimen/spaceL"
                    android:layout_marginRight="@dimen/spaceL"
                    android:onClick="addTwoPointsForTeamA"
                    android:text="@string/penalty" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spaceS"
                    android:layout_marginLeft="@dimen/spaceL"
                    android:layout_marginRight="@dimen/spaceL"
                    android:onClick="addTwoPointsForTeamA"
                    android:text="@string/conversion" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spaceS"
                    android:layout_marginLeft="@dimen/spaceL"
                    android:layout_marginRight="@dimen/spaceL"
                    android:onClick="addThreePointsForTeamA"
                    android:text="@string/drop_goal" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/lineWeight"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spaceM"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="@dimen/space0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="@dimen/spaceM"
                    android:text="@string/teamB"
                    android:textColor="@color/textColor1"
                    android:textSize="@dimen/textSizeM" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/spaceL"
                    android:text="@string/text0"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textSizeXXL" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spaceS"
                    android:layout_marginLeft="@dimen/spaceL"
                    android:layout_marginRight="@dimen/spaceL"
                    android:onClick="addFivePointsForTeamB"
                    android:text="@string/try5" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spaceS"
                    android:layout_marginLeft="@dimen/spaceL"
                    android:layout_marginRight="@dimen/spaceL"
                    android:onClick="addTwoPointsForTeamB"
                    android:text="@string/penalty" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spaceS"
                    android:layout_marginLeft="@dimen/spaceL"
                    android:layout_marginRight="@dimen/spaceL"
                    android:onClick="addTwoPointsForTeamB"
                    android:text="@string/conversion" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spaceS"
                    android:layout_marginLeft="@dimen/spaceL"
                    android:layout_marginRight="@dimen/spaceL"
                    android:onClick="addThreePointsForTeamB"
                    android:text="@string/drop_goal" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spaceXL"
            android:onClick="resetScore"
            android:text="@string/reset" />

    </RelativeLayout>
</ScrollView>